--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
-		<sonar.login>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</sonar.login>
+		<sonar.token>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</sonar.token>
 	</properties>
 	<dependencies>
 		<dependency>
